--- a/src/WebComponents/Attributes/persistent-object-attribute-edit.scss
+++ b/src/WebComponents/Attributes/persistent-object-attribute-edit.scss
@@ -116,7 +116,6 @@
             outline: none;
             color: #333;
             width: 100%;
-            text-overflow: ellipsis;
         }
     }
 
