--- a/src/WebComponents/PersistentObjectAttributePresenter/persistent-object-attribute-presenter.scss
+++ b/src/WebComponents/PersistentObjectAttributePresenter/persistent-object-attribute-presenter.scss
@@ -109,6 +109,7 @@
 
         .attribute, vi-template-presenter {
             @include flex();
+            min-width: 0;
         }
     }
 
